Fixes some home page layout issues.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,4 @@
-body {
-	margin-bottom: 70px;
-}
+
 .navbar {
   border-radius: 0;
 }
